# fyzj

./: .env  .env.example  .gitignore  AGENTS.md  AI_CHAT_SETUP.md  README.md  compose.infra.yaml  compose.yaml  dockfile  j.json
.playwright-mcp/: page-2026-04-28T08-12-07-407Z.yml  page-2026-04-28T08-12-32-945Z.yml  page-2026-04-28T08-12-48-210Z.yml  page-2026-04-28T08-21-06-799Z.yml  page-2026-04-28T08-21-32-080Z.yml  page-2026-04-28T08-22-15-411Z.yml  page-2026-04-28T08-22-24-165Z.yml  page-2026-04-28T08-22-56-377Z.yml  page-2026-04-28T08-23-16-787Z.yml  page-2026-04-28T08-23-24-039Z.yml  page-2026-04-28T08-23-37-235Z.yml  page-2026-04-28T08-23-46-222Z.yml
agent_api/: .dockerignore  .env.example  Dockerfile  compose.yaml  config.yaml  pyproject.toml  token_jwt_public.pem
agent_api/data/shirt/: 2 短寸法讲解.md  3 胸度法制图讲解.md
agent_api/data/skirt/: 1 裙原型.md  2 裙原型放松量.md
agent_api/metrics/: 说明文档.md
agent_api/src/: main.py
agent_api/src/agents/: AGENTS.md  __init__.py  agents.py  chatbot.py  lazy_agent.py  rag_assistant.py  safeguard.py  tools.py
agent_api/src/api/: __init__.py  deps.py  rate_limit.py  service.py
agent_api/src/api/routers/: admin.py  agent.py  files_admin.py  vector_admin.py
agent_api/src/core/: __init__.py  cache.py  celery_app.py  config.py  llm.py  postgres.py  rate_limit.py  redis.py
agent_api/src/schema/: __init__.py  schema.py
agent_api/src/scripts/: ingest.py
agent_api/src/tasks/: __init__.py  agent_tasks.py
playwright-report/: index.html
postgres-init/: 01-init-dbs.sql
steamlit_web/: .env  Dockerfile  streamlit_admin.py
steamlit_web/data/: courses.yaml
steamlit_web/pages/: chunk_viewer.py  ingest_ui.py
steamlit_web/scripts/: ingest.py
streamlit_web/: .env  Dockerfile  compose.yaml  pyproject.toml
streamlit_web/data/: 第一课讲稿.md
streamlit_web/src/: admin_dashboard.py  ingest_ui.py
streamlit_web/src/pages/: chunk_viewer.py
user_api/: .env  Dockerfile  alembic.ini  compose.yaml
user_api/alembic/: env.py
user_api/alembic/versions/: 001_add_user_role_permission_tables.py  002_add_courses_table.py
user_api/src/api/: deps.py
user_api/src/core/: database.py  security.py
user_api/src/data/: courses.yaml
user_api/src/models/: __init__.py  course.py  role.py  user.py
user_api/src/scripts/: seed_courses.py  seed_runner.py
web/: .env.example  auth.ts  next.config.ts  package.json  pnpm-lock.yaml  token_jwt_key.pem
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/auth/[...nextauth]/: route.ts
web/app/course/[id]/: page.tsx
web/components/auth/: auth-modal.tsx  login-form.tsx  register-form.tsx
web/components/chat/: chat-input.tsx  global-chat-shell.tsx
web/components/course/: course-list.tsx  navbar.tsx
web/components/layout/: header.tsx  notification-banner.tsx
web/components/ui/: sidebar.tsx
web/hooks/: use-chat.test.ts  use-chat.ts  use-course-detail.test.ts  use-course-detail.ts  use-courses.test.ts  use-courses.ts
web/lib/: api.ts  auth.tsx
web/lib/store/: use-notification-store.ts
web/types/: next-auth.d.ts
