[project]
name = "streamlit-admin"
version = "0.1.0"
description = "方圆智版 AI 前端管理引擎"
readme = "README.md"
authors = [{ name = "钟总" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<3.14"

dependencies = [
    "streamlit >= 1.32.0",
    "requests >= 2.31.0",
    "python-dotenv >= 1.0.0",

]
# ==========================================
# 📐 代码规范与测试配置
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "U"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
OPENAI_API_KEY = "sk-fake-openai-key"

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["numexpr.*", "langchain_mcp_adapters.*"]
ignore_missing_imports = true